add adjusted prob value

--- a/examples/plot_sms.ipynb
+++ b/examples/plot_sms.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'goldviking (29/m) is inviting you to be his friend. reply yes-762 or no-762 see him: www.sms.ac/u/goldviking stop? send stop frnd to 62468'"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "        -1, -1, -1, -1,  1]))"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "1"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "(array([0.86570696, 0.13429304]), array([0.64425163, 0.35574837]))"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "       [0.36563877, 0.63436123]])"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "array([0.50860825])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "       -11.94244805,  -5.20403212])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.roc_curve.RocCurveDisplay at 0x7f1718c21010>"
+       "<sklearn.metrics._plot.roc_curve.RocCurveDisplay at 0x7f1716517910>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -518,16 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.roc_curve.RocCurveDisplay at 0x7f1716589150>"
+       "<sklearn.metrics._plot.roc_curve.RocCurveDisplay at 0x7f171613b090>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -712,12 +712,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that, even though AUC of both classes for VoSG are low, it effectively better ranks the most trustable examples from class 1. Mislabeled detection in datasets with class imbalanced is a problem not studied that much, but one improvement we can make to our detectors is to \"adjust\" their outputed probabilities before probing them (computing margin or gradients)."
+    "It seems that, even though AUC of both classes for VoSG are low, it effectively better ranks the most trustable examples from class 1. Mislabeled detection in datasets with class imbalanced is a problem not studied that much, but one improvement we can make to our detectors is to \"adjust\" their outputed probabilities before probing them (computing margin or gradients).\n",
+    "\n",
+    "$\\text{adjusted-score}(x, y, p) = \\text{score}(x, y, \\tilde{p})$, where $\\tilde{p} = p - \\bar{p}$, with $\\bar{p}_k = \\frac{1}{|X_k|}\\sum_{x\\in X_k}f(x)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
