reword some conclusions

--- a/examples/plot_sms.ipynb
+++ b/examples/plot_sms.ipynb
@@ -516,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What's happening ? After filtering the dataset we got almost worst performance than doing nothing. Maybe AUM is not fitted for our case, let's try another detector Variance of Softmax's Gradients, Vo(S)G.\n",
+    "What's happening ? After filtering the dataset we got performance close to doing nothing. Maybe AUM is not fitted for our case, let's try another detector Variance of Softmax's Gradients, Vo(S)G.\n",
     "\n",
     "This detector is inspired from the litterature of explainability and suppose that mislabeled examples will have also noisy explanations for their predictions."
    ]
@@ -627,7 +627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quite surprisingly it performs way better, what's happening ? I'm going to help you by giving you a clue."
+    "Quite surprisingly it performs way better, with low variance when the less trusted examples are filtered out. What's happening ? I'm going to help you by giving you a clue."
    ]
   },
   {
