--- a/examples/plot_sms.ipynb
+++ b/examples/plot_sms.ipynb
@@ -773,7 +773,7 @@
     "from mislabeled.aggregate.aggregators import sum\n",
     "\n",
     "adjusted_aum = ModelBasedDetector(\n",
-    "    classifier, ProgressiveEnsemble(), \"adjusted_soft_margin\", sum\n",
+    "    classifier, ProgressiveEnsemble(), \"adjusted_margin\", sum\n",
     ")\n",
     "\n",
     "with warnings.catch_warnings():\n",
@@ -888,7 +888,7 @@
     "for i in range(n_runs):\n",
     "    classifier.set_params(random_state=seed + i)\n",
     "    adjusted_aum = ModelBasedDetector(\n",
-    "        classifier, ProgressiveEnsemble(), \"adjusted_soft_margin\", sum\n",
+    "        classifier, ProgressiveEnsemble(), \"adjusted_margin\", sum\n",
     "    )\n",
     "\n",
     "    with warnings.catch_warnings():\n",
