renames to ModelProbing

--- a/examples/plot_sms.ipynb
+++ b/examples/plot_sms.ipynb
@@ -768,11 +768,11 @@
     }
    ],
    "source": [
-    "from mislabeled.detect import ModelBasedDetector\n",
+    "from mislabeled.detect import ModelProbingDetector\n",
     "from mislabeled.ensemble import ProgressiveEnsemble\n",
     "from mislabeled.aggregate import sum\n",
     "\n",
-    "adjusted_aum = ModelBasedDetector(\n",
+    "adjusted_aum = ModelProbingDetector(\n",
     "    classifier, ProgressiveEnsemble(), \"adjusted_margin\", sum\n",
     ")\n",
     "\n",
@@ -887,7 +887,7 @@
     "\n",
     "for i in range(n_runs):\n",
     "    classifier.set_params(random_state=seed + i)\n",
-    "    adjusted_aum = ModelBasedDetector(\n",
+    "    adjusted_aum = ModelProbingDetector(\n",
     "        classifier, ProgressiveEnsemble(), \"adjusted_margin\", sum\n",
     "    )\n",
     "\n",
