grad_X but on the loss instead of the softmax

--- a/examples/plot_vog.ipynb
+++ b/examples/plot_vog.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,8 @@
       "text/html": [
        "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
-       "  --sklearn-color-text: black;\n",
+       "  --sklearn-color-text: #000;\n",
+       "  --sklearn-color-text-muted: #666;\n",
        "  --sklearn-color-line: gray;\n",
        "  /* Definition of color scheme for unfitted estimators */\n",
        "  --sklearn-color-unfitted-level-0: #fff5e6;\n",
@@ -166,12 +167,21 @@
        "/* Toggleable label */\n",
        "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
-       "  display: block;\n",
+       "  display: flex;\n",
        "  width: 100%;\n",
        "  margin-bottom: 0;\n",
        "  padding: 0.5em;\n",
        "  box-sizing: border-box;\n",
        "  text-align: center;\n",
+       "  align-items: start;\n",
+       "  justify-content: space-between;\n",
+       "  gap: 0.5em;\n",
+       "}\n",
+       "\n",
+       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
+       "  font-size: 0.6rem;\n",
+       "  font-weight: lighter;\n",
+       "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
@@ -324,7 +334,8 @@
        "  height: 1em;\n",
        "  width: 1em;\n",
        "  text-decoration: none !important;\n",
-       "  margin-left: 1ex;\n",
+       "  margin-left: 0.5em;\n",
+       "  text-align: center;\n",
        "  /* unfitted */\n",
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-unfitted-level-1);\n",
@@ -425,10 +436,10 @@
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearVoSG(base_model=SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;,\n",
        "                                    loss=&#x27;log_loss&#x27;, max_iter=100,\n",
-       "                                    random_state=1))</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label  sk-toggleable__label-arrow \">&nbsp;LinearVoSG<span class=\"sk-estimator-doc-link \">i<span>Not fitted</span></span></label><div class=\"sk-toggleable__content \"><pre>LinearVoSG(base_model=SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;,\n",
+       "                                    random_state=1))</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label  sk-toggleable__label-arrow\"><div><div>LinearVoSG</div></div><div><span class=\"sk-estimator-doc-link \">i<span>Not fitted</span></span></div></label><div class=\"sk-toggleable__content \"><pre>LinearVoSG(base_model=SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;,\n",
        "                                    loss=&#x27;log_loss&#x27;, max_iter=100,\n",
-       "                                    random_state=1))</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label  sk-toggleable__label-arrow \">base_model: SGDClassifier</label><div class=\"sk-toggleable__content \"><pre>SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;, loss=&#x27;log_loss&#x27;,\n",
-       "              max_iter=100, random_state=1)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label  sk-toggleable__label-arrow \">&nbsp;SGDClassifier<a class=\"sk-estimator-doc-link \" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.SGDClassifier.html\">?<span>Documentation for SGDClassifier</span></a></label><div class=\"sk-toggleable__content \"><pre>SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;, loss=&#x27;log_loss&#x27;,\n",
+       "                                    random_state=1))</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label  sk-toggleable__label-arrow\"><div><div>base_model: SGDClassifier</div></div></label><div class=\"sk-toggleable__content \"><pre>SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;, loss=&#x27;log_loss&#x27;,\n",
+       "              max_iter=100, random_state=1)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator  sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label  sk-toggleable__label-arrow\"><div><div>SGDClassifier</div></div><div><a class=\"sk-estimator-doc-link \" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.SGDClassifier.html\">?<span>Documentation for SGDClassifier</span></a></div></label><div class=\"sk-toggleable__content \"><pre>SGDClassifier(eta0=0.001, learning_rate=&#x27;constant&#x27;, loss=&#x27;log_loss&#x27;,\n",
        "              max_iter=100, random_state=1)</pre></div> </div></div></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
@@ -437,7 +448,7 @@
        "                                    random_state=1))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
