linear model as class to extend it

--- a/examples/plot_influence_mlp.ipynb
+++ b/examples/plot_influence_mlp.ipynb
@@ -31,7 +31,7 @@
     "from sklearn import clone\n",
     "\n",
     "\n",
-    "from mislabeled.probe import SelfInfluence, ApproximateLOO, linearize"
+    "from mislabeled.probe import SelfInfluence, ApproximateLOO, linearize, LinearModel"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,8 @@
     "\n",
     "    def objective(model, X, y):\n",
     "        linearized, X, y = linearize(model, X, y)\n",
-    "        return linearized._replace(regul=None).objective(X, y)\n",
+    "        linearized.regul = None\n",
+    "        return linearized.objective(X, y)\n",
     "\n",
     "    def eval(model, X, y, train, test):\n",
     "\n",
