more stable formula in cook and aloo

--- a/examples/plot_influence_mlp.ipynb
+++ b/examples/plot_influence_mlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from matplotlib import pyplot as plt\n",
     "from scipy.stats import pearsonr, kendalltau\n",
     "from sklearn.datasets import make_blobs\n",
-    "from sklearn.discriminant_analysis import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.kernel_approximation import RBFSampler\n",
     "from sklearn.model_selection import LeaveOneOut\n",
     "from sklearn.neural_network import MLPClassifier\n",
@@ -29,14 +29,14 @@
     "from sklearn import clone\n",
     "\n",
     "\n",
-    "from mislabeled.probe import SelfInfluence, ApproximateLOO, linearize, LinearModel\n",
+    "from mislabeled.probe import ApproximateLOO, linearize\n",
     "from mislabeled.probe._fisher import linearize_mlp_fisher\n",
     "from mislabeled.probe._linear import linearize_mlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,7 @@
    ],
    "source": [
     "X1, _ = make_blobs(centers=2, random_state=1)\n",
+    "# X = StandardScaler().fit_transform(X)\n",
     "X1 = StandardScaler().fit_transform(X1)\n",
     "X = np.vstack((X1, X1 @ np.array([[0, -1], [1, 0]])))\n",
     "y = np.hstack((np.ones(X1.shape[0]), np.zeros(X1.shape[0]))).astype(int)\n",
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,13 +167,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
